--- a/src/app/open-requirements/open-requirements-edit/open-requirements-edit.component.html
+++ b/src/app/open-requirements/open-requirements-edit/open-requirements-edit.component.html
@@ -69,7 +69,7 @@
                       <mat-form-field class="form-group" appearance="outline">
                           <mat-label>SO# Line Item ID</mat-label>
                           <input matInput class="form-control" formControlName="soLineItemID" placeholder="SO# Line Item"
-                              type="number" disabled required value="" />
+                              type="number" required value="" />
                       </mat-form-field>
                   </div>
               </div>
