--- a/src/app/resource-details/resource-details-tab/resource-details-tab.component.html
+++ b/src/app/resource-details/resource-details-tab/resource-details-tab.component.html
@@ -8,19 +8,24 @@
         </mat-form-field>
         <table mat-table [dataSource]="dataSources" class="mat-elevation-z8" matSort>
 
-          <ng-container matColumnDef="groupName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Group Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.groupName}} </td>
+          <ng-container matColumnDef="skillSet">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Skill-Set </th>
+            <td mat-cell *matCellDef="let element"> {{element.skillSet}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="domainName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Domain Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.domainName}} </td>
+          <ng-container matColumnDef="experience">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Experience </th>
+            <td mat-cell *matCellDef="let element"> {{element.experience}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="ownerName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Owner Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.ownerName}} </td>
+          <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Role </th>
+            <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="rate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate </th>
+            <td mat-cell *matCellDef="let element"> {{element.rate}} </td>
           </ng-container>
 
           <ng-container matColumnDef="cogId">
@@ -73,24 +78,24 @@
             <td mat-cell *matCellDef="let element"> {{element.pickerEnd}} </td>
           </ng-container>
 
-          <!-- <ng-container matColumnDef="updateRow" stickyEnd>
-              <th mat-header-cell *matHeaderCellDef> Update </th>
-              <td mat-cell *matCellDef="let element">
-                <button mat-button (click)="editRequirementData(element.soLineItemID)">
-                  <mat-icon>edit</mat-icon>
-                </button>
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="deleteRow" stickyEnd>
-              <th mat-header-cell *matHeaderCellDef> Delete </th>
-              <td mat-cell *matCellDef="let element">
-                <button mat-button (click)="deleteRequirementData(element.soLineItemID)">
-                  <mat-icon>delete</mat-icon>
-                </button>
-              </td>
-            </ng-container> -->
+          <ng-container matColumnDef="updateRow" stickyEnd>
+            <th mat-header-cell *matHeaderCellDef> Update </th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button (click)="editResourceData(element)">
+                <mat-icon>launch</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="deleteRow" stickyEnd>
+            <th mat-header-cell *matHeaderCellDef> Delete </th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button color="warn" (click)="deleteResourceData(element.cogId)">
+                <mat-icon>delete_outline</mat-icon>
+              </button>
+            </td>
+          </ng-container>
 
-          <ng-container matColumnDef="actions">
+          <!-- <ng-container matColumnDef="actions">
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
             <mat-cell *matCellDef="let row">
               <button mat-icon-button>
@@ -100,7 +105,7 @@
                 <mat-icon>delete_outline</mat-icon>
               </button>
             </mat-cell>
-          </ng-container>
+          </ng-container> -->
           <ng-container matColumnDef="loading">
             <mat-footer-cell *matFooterCellDef colspan="6">
               Loading data...
