--- a/src/app/resource-details/resource-details.component.html
+++ b/src/app/resource-details/resource-details.component.html
@@ -32,7 +32,7 @@
                           Walmart ID
                         </mat-option>
                         <mat-option value="Project ID">
-                            Project ID
+                          Project ID
                           </mat-option>
                         <mat-option value="FG Work ID">
                           FG Work ID
@@ -40,14 +40,8 @@
                         <mat-option value="FG Contract">
                           FG Contract
                         </mat-option>
-                        <mat-option value="Owner Name">
-                          Owner Name
-                        </mat-option>
-                        <mat-option value="Group Name">
-                          Group Name
-                        </mat-option>
-                        <mat-option value="Domain Name">
-                          Domain Name
+                        <mat-option value="Role">
+                          Role
                         </mat-option>
                       </mat-select>
                     </mat-form-field>
@@ -99,21 +93,25 @@
                 <div fxFlex="100%" fxFlexFill>
                   <table mat-table [dataSource]="dataSources" class="mat-elevation-z8" matSort>
 
-                    <ng-container matColumnDef="groupName">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Group Name </th>
-                      <td mat-cell *matCellDef="let element"> {{element.groupName}} </td>
+                    <ng-container matColumnDef="skillSet">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Skill-Set </th>
+                      <td mat-cell *matCellDef="let element"> {{element.skillSet}} </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="domainName">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Domain Name </th>
-                      <td mat-cell *matCellDef="let element"> {{element.domainName}} </td>
+                    <ng-container matColumnDef="experience">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Experience </th>
+                      <td mat-cell *matCellDef="let element"> {{element.experience}} </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="ownerName">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Owner Name </th>
-                      <td mat-cell *matCellDef="let element"> {{element.ownerName}} </td>
+                    <ng-container matColumnDef="role">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Role </th>
+                      <td mat-cell *matCellDef="let element"> {{element.role}} </td>
                     </ng-container>
 
+                    <ng-container matColumnDef="rate">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate </th>
+                        <td mat-cell *matCellDef="let element"> {{element.rate}} </td>
+                      </ng-container>
 
                     <ng-container matColumnDef="cogId">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header> Cognizant ID </th>
@@ -165,24 +163,24 @@
                       <td mat-cell *matCellDef="let element"> {{element.pickerEnd}} </td>
                     </ng-container>
 
-                    <!-- <ng-container matColumnDef="updateRow" stickyEnd>
+                    <ng-container matColumnDef="updateRow" stickyEnd>
                         <th mat-header-cell *matHeaderCellDef> Update </th>
                         <td mat-cell *matCellDef="let element">
-                          <button mat-button (click)="editResourceData(element.cogId)">
-                            <mat-icon>edit</mat-icon>
+                          <button mat-button (click)="editResourceData(element)">
+                              <mat-icon>launch</mat-icon>
                           </button>
                         </td>
                       </ng-container>
                       <ng-container matColumnDef="deleteRow" stickyEnd>
                         <th mat-header-cell *matHeaderCellDef> Delete </th>
                         <td mat-cell *matCellDef="let element">
-                          <button mat-button (click)="deleteResourceData(element.cogId)">
-                            <mat-icon>delete</mat-icon>
+                          <button mat-button color="warn" (click)="deleteResourceData(element.cogId)">
+                              <mat-icon>delete_outline</mat-icon>
                           </button>
                         </td>
-                      </ng-container> -->
+                      </ng-container>
 
-                    <ng-container matColumnDef="actions">
+                    <!-- <ng-container matColumnDef="actions">
                       <mat-header-cell *matHeaderCellDef></mat-header-cell>
                       <mat-cell *matCellDef="let row">
                         <button mat-icon-button>
@@ -192,7 +190,7 @@
                           <mat-icon>delete_outline</mat-icon>
                         </button>
                       </mat-cell>
-                    </ng-container>
+                    </ng-container> -->
                     <ng-container matColumnDef="loading">
                       <mat-footer-cell *matFooterCellDef colspan="6">
                         Loading data...
