--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -26,7 +26,7 @@
                                 <mat-grid-tile colspan="1" rowspan="1">
                                     <label class="mat-typography" style="padding-right: 10px;">Select {{selectPage.value}} Sheet : </label>
                                     <input type="file" style="display:none" (change)="selectFile($event)" #fileInput>
-                                    <button mat-flat-button type="button" (click)="fileInput.click()" style="background-color: rgb(3, 109, 3); color: white">
+                                    <button mat-flat-button type="button" (click)="fileInput.click()" color="primary">
                                         <mat-icon>check_circle</mat-icon>
                                         Select File
                                     </button>
@@ -37,7 +37,7 @@
                                     </mat-form-field>
                                     <div>
                                         <span style="padding-left: 10px;" >
-                                            <button mat-flat-button type="button" (click)="uploadFile()" color="primary">
+                                            <button mat-flat-button type="button" (click)="uploadFile()" style="background-color: rgb(3, 109, 3); color: white">
                                                 <mat-icon>cloud_upload</mat-icon>
                                                 Upload
                                             </button>
