--- a/src/app/open-requirements/open-requirements-form/open-requirements-form.component.html
+++ b/src/app/open-requirements/open-requirements-form/open-requirements-form.component.html
@@ -166,7 +166,7 @@
                     <div class="controles-container">
                         <mat-form-field class="form-group" appearance="outline">
                             <mat-label>Revenue(in $)</mat-label>
-                            <input matInput class="form-control" formControlName="revenue" placeholder="Revenue(in $)" type="text"
+                            <input matInput class="form-control" formControlName="revenue" placeholder="Revenue(in $)" type="number"
                                 readonly [value]="totalRevenue"/>
                         </mat-form-field>
                     </div>
