--- a/src/app/open-requirements/open-requirements-edit/open-requirements-edit.component.html
+++ b/src/app/open-requirements/open-requirements-edit/open-requirements-edit.component.html
@@ -165,7 +165,7 @@
                       <mat-form-field class="form-group" appearance="outline">
                           <mat-label>Revenue</mat-label>
                           <input matInput class="form-control" formControlName="revenue" placeholder="Revenue"
-                              type="text" />
+                              type="number" />
                       </mat-form-field>
                   </div>
               </div>
